@@ -16,12 +16,13 @@ import java.io.IOException;
 import java.io.OutputStream;
 import java.io.Serializable;
 import java.io.StringReader;
+import java.nio.charset.StandardCharsets;
 import java.security.InvalidKeyException;
 import java.security.NoSuchAlgorithmException;
+import java.security.NoSuchProviderException;
 import java.security.PublicKey;
 import java.security.SecureRandom;
 import java.security.cert.Certificate;
-import java.security.cert.X509Certificate;
 import java.text.ParseException;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -29,9 +30,12 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.Date;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedList;
 import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 import java.util.Properties;
 import java.util.Random;
 import java.util.Set;
@@ -40,9 +44,6 @@ import java.util.stream.Collectors;
 import javax.annotation.PostConstruct;
 import javax.ejb.EJB;
 import javax.faces.application.FacesMessage;
-import javax.faces.bean.ManagedBean;
-import javax.faces.bean.ManagedProperty;
-import javax.faces.bean.ViewScoped;
 import javax.faces.component.UIComponent;
 import javax.faces.component.UIInput;
 import javax.faces.component.html.HtmlSelectOneMenu;
@@ -52,24 +53,36 @@ import javax.faces.event.AjaxBehaviorEvent;
 import javax.faces.event.ComponentSystemEvent;
 import javax.faces.model.SelectItem;
 import javax.faces.validator.ValidatorException;
+import javax.faces.view.ViewScoped;
+import javax.inject.Inject;
+import javax.inject.Named;
+import javax.servlet.http.Part;
 
 import org.apache.commons.codec.binary.Base64;
+import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang.StringUtils;
 import org.apache.commons.lang.exception.ExceptionUtils;
 import org.apache.log4j.Logger;
-import org.apache.myfaces.custom.fileupload.UploadedFile;
 import org.bouncycastle.asn1.ASN1Primitive;
 import org.bouncycastle.asn1.x509.Extension;
 import org.bouncycastle.pkcs.PKCS10CertificationRequest;
 import org.bouncycastle.pkcs.jcajce.JcaPKCS10CertificationRequest;
 import org.bouncycastle.util.encoders.Hex;
-import org.cesecore.ErrorCode;
 import org.cesecore.authorization.AuthorizationDeniedException;
 import org.cesecore.certificates.ca.ApprovalRequestType;
 import org.cesecore.certificates.ca.CAInfo;
 import org.cesecore.certificates.ca.X509CAInfo;
+import org.cesecore.certificates.certificate.CertificateConstants;
+import org.cesecore.certificates.certificate.certextensions.CertificateExtensionException;
 import org.cesecore.certificates.certificate.certextensions.standard.CabForumOrganizationIdentifier;
+import org.cesecore.certificates.certificate.certextensions.standard.NameConstraint;
 import org.cesecore.certificates.certificate.certextensions.standard.QcStatement;
+import org.cesecore.certificates.certificate.request.PKCS10RequestMessage;
+import org.cesecore.certificates.certificate.request.RequestMessage;
+import org.cesecore.certificates.certificate.request.RequestMessageUtils;
+import org.cesecore.certificates.certificate.ssh.SshEndEntityProfileFields;
+import org.cesecore.certificates.certificate.ssh.SshKeyFactory;
+import org.cesecore.certificates.certificate.ssh.SshPublicKey;
 import org.cesecore.certificates.certificateprofile.CertificateProfile;
 import org.cesecore.certificates.crl.RevocationReasons;
 import org.cesecore.certificates.endentity.EndEntityConstants;
@@ -78,17 +91,10 @@ import org.cesecore.certificates.endentity.EndEntityType;
 import org.cesecore.certificates.endentity.EndEntityTypes;
 import org.cesecore.certificates.endentity.ExtendedInformation;
 import org.cesecore.certificates.endentity.PSD2RoleOfPSPStatement;
-import org.cesecore.certificates.util.AlgorithmConstants;
-import org.cesecore.certificates.util.AlgorithmTools;
-import org.cesecore.certificates.util.DnComponents;
 import org.cesecore.certificates.util.cert.SubjectDirAttrExtension;
 import org.cesecore.config.CesecoreConfiguration;
 import org.cesecore.config.EABConfiguration;
-import org.cesecore.keys.util.KeyTools;
-import org.cesecore.util.CeSecoreNameStyle;
-import org.cesecore.util.CertTools;
 import org.cesecore.util.PrintableStringNameStyle;
-import org.cesecore.util.StringTools;
 import org.cesecore.util.ValidityDate;
 import org.ejbca.core.EjbcaException;
 import org.ejbca.core.model.SecConst;
@@ -99,8 +105,20 @@ import org.ejbca.core.model.era.IdNameHashMap;
 import org.ejbca.core.model.era.KeyToValueHolder;
 import org.ejbca.core.model.era.RaMasterApiProxyBeanLocal;
 import org.ejbca.core.model.ra.raadmin.EndEntityProfile;
+import org.ejbca.core.model.ra.raadmin.EndEntityProfile.Field;
 import org.ejbca.core.model.ra.raadmin.EndEntityProfile.FieldInstance;
+import org.ejbca.core.protocol.ssh.SshRequestMessage;
 import org.ejbca.util.cert.OID;
+
+import com.keyfactor.ErrorCode;
+import com.keyfactor.util.CeSecoreNameStyle;
+import com.keyfactor.util.CertTools;
+import com.keyfactor.util.StringTools;
+import com.keyfactor.util.certificate.DnComponents;
+import com.keyfactor.util.crypto.algorithm.AlgorithmConfigurationCache;
+import com.keyfactor.util.crypto.algorithm.AlgorithmConstants;
+import com.keyfactor.util.crypto.algorithm.AlgorithmTools;
+import com.keyfactor.util.keys.KeyTools;
 
 /**
  * Managed bean that backs up the enrollingmakenewrequest.xhtml page.
@@ -115,7 +133,7 @@ import org.ejbca.util.cert.OID;
  * all permutations that could potentially be affected down the line.)
  *
  */
-@ManagedBean
+@Named
 @ViewScoped
 public class EnrollMakeNewRequestBean implements Serializable {
 
@@ -124,24 +142,28 @@ public class EnrollMakeNewRequestBean implements Serializable {
 
     private static final String ENROLL_USERNAME_ALREADY_EXISTS = "enroll_username_already_exists";
     private static final String ENROLL_INVALID_CERTIFICATE_REQUEST = "enroll_invalid_certificate_request";
+    private static final String ENROLL_INVALID_CERTIFICATE_REQUEST_DN_FIELD = "enroll_invalid_certificate_request_not_parsable_subject_dn_field";
     private static final String ENROLL_SELECT_KA_NOCHOICE = "enroll_select_ka_nochoice";
+    
+    private static final String ENROLL_INVALID_SSH_PUB_KEY = "enroll_invalid_ssh_pub_key";
+    
     private static final String APPLICATION_X_PKCS12 = "application/x-pkcs12";
     private static final String APPLICATION_OCTET_STREAM = "application/octet-stream";
     public static String PARAM_REQUESTID = "requestId";
-    public static int MAX_CSR_LENGTH = 10240;
+    public static int MAX_CSR_LENGTH = 250000;
     private static final int MIN_OPTIONAL_FIELDS_TO_SHOW = 2;
 
     @EJB
     private RaMasterApiProxyBeanLocal raMasterApiProxyBean;
 
-    @ManagedProperty(value = "#{raAuthenticationBean}")
+    @Inject
     private RaAuthenticationBean raAuthenticationBean;
 
     public void setRaAuthenticationBean(final RaAuthenticationBean raAuthenticationBean) {
         this.raAuthenticationBean = raAuthenticationBean;
     }
 
-    @ManagedProperty(value = "#{raLocaleBean}")
+    @Inject
     private RaLocaleBean raLocaleBean;
 
     public void setRaLocaleBean(final RaLocaleBean raLocaleBean) {
@@ -159,6 +181,21 @@ public class EnrollMakeNewRequestBean implements Serializable {
     private Integer selectedIssuanceRevocationReason;
     private String validity = StringUtils.EMPTY;
     private EABConfiguration eabConfiguration;
+    
+    // SSH certificate enrollment fields
+    private String sshKeyId;
+    private String sshCertificateComment;
+    private byte[] sshPublicKey;
+    private String sshPublicKeyString;
+    private String sshPubKeyFileName;
+    List<EndEntityProfile.FieldInstance> sshPrincipals;
+    private String criticalOptionsForceCommand;
+    private String criticalOptionsSourceAddress;
+    private Optional<Boolean> criticalOptionsVerifyRequired = Optional.empty();
+    private String sshAdditionalExtensions;
+    private String sshPubKeyDescription;
+    private boolean useClearPassword;
+    private boolean clearPasswordDirty;
 
     /**
      * Is private key generated by the server (CA) or is the key provided by the user (usually in the form of a CSR)
@@ -176,6 +213,9 @@ public class EnrollMakeNewRequestBean implements Serializable {
     private List<SelectItem> availableAlgorithmSelectItems = null;
 
     private List<String> selectedPsd2PspRoles;
+    private String certValidityStartTime;
+    private String certValidityEndTime;
+
     private String psd2NcaId;
     private String psd2NcaName;
     private String cabfOrganizationIdentifier;
@@ -183,7 +223,7 @@ public class EnrollMakeNewRequestBean implements Serializable {
     private String algorithmFromCsr; //PROVIDED BY USER
     private int selectedTokenType;
 
-    private UploadedFile uploadFile;
+    private Part uploadFile;
     private String certificateRequest;
     private String publicKeyModulus;
     private String publicKeyExponent;
@@ -200,10 +240,14 @@ public class EnrollMakeNewRequestBean implements Serializable {
     private int requestId;
     private boolean requestPreviewMoreDetails;
     private boolean setCustomValidity;
+    private Boolean useKeyRecoverable = null;
     private UIComponent subjectDnMessagesComponent;
     private UIComponent userCredentialsMessagesComponent;
     private UIComponent confirmPasswordComponent;
     private UIComponent validityInputComponent;
+    private String nameConstraintPermitted;
+    private String nameConstraintExcluded;
+    private Boolean sendNotification;
 
     private int numberOfOptionalSdnFieldsToShow = MIN_OPTIONAL_FIELDS_TO_SHOW; 
     private int numberOfOptionalSanFieldsToShow = MIN_OPTIONAL_FIELDS_TO_SHOW; 
@@ -315,8 +359,12 @@ public class EnrollMakeNewRequestBean implements Serializable {
     }
 
     public boolean isEmailRequired() {
-        return getEndEntityProfile().isRequired(EndEntityProfile.SENDNOTIFICATION, 0) ||
+        return getSendNotification() ||
                 getEndEntityProfile().isRequired(EndEntityProfile.EMAIL, 0);
+    }
+
+    public boolean isDnEmail(EndEntityProfile.FieldInstance instance) {
+        return instance.getName().equals(DnComponents.DNEMAILADDRESS);
     }
 
     /**
@@ -387,7 +435,7 @@ public class EnrollMakeNewRequestBean implements Serializable {
      */
     public boolean isGenerateFromCsrButtonRendered() {
         EndEntityProfile endEntityProfile = getEndEntityProfile();
-        if (endEntityProfile == null) {
+        if (endEntityProfile == null || isRenderSshEnrolmentFields()) {
             return false;
         }
         String availableKeyStores = endEntityProfile.getValue(EndEntityProfile.AVAILKEYSTORE, 0);
@@ -463,7 +511,7 @@ public class EnrollMakeNewRequestBean implements Serializable {
     /**
      * @return true if the selection of certificate authority should be rendered
      */
-    public boolean isSelectCertificateAuthorityRendered() {
+    public boolean isSelectCertificateAuthorityRendered() {        
         return StringUtils.isNotEmpty(getSelectedCertificateProfile()) && (getAvailableCertificateAuthorities().size() > 1 ||
                 (getAvailableCertificateAuthorities().size() == 1 && isRenderNonModifiableTemplates()));
     }
@@ -546,14 +594,14 @@ public class EnrollMakeNewRequestBean implements Serializable {
      * @return true if the select token drop down should be rendered
      */
     public boolean isSelectTokenRendered() {
-        return KeyPairGeneration.POSTPONE.equals(getSelectedKeyPairGenerationEnum());
+        return !isRenderSshEnrolmentFields() && KeyPairGeneration.POSTPONE.equals(getSelectedKeyPairGenerationEnum());
     }
 
     /**
      * @return true if the selectKeyAlgorithm should be rendered
      */
     public boolean isSelectKeyAlgorithmRendered() {
-        return KeyPairGeneration.ON_SERVER.equals(getSelectedKeyPairGenerationEnum()) && (getAvailableAlgorithmSelectItems().size() > 1 ||
+        return !isRenderSshEnrolmentFields() && KeyPairGeneration.ON_SERVER.equals(getSelectedKeyPairGenerationEnum()) && (getAvailableAlgorithmSelectItems().size() > 1 ||
                 (getAvailableAlgorithmSelectItems().size() == 1 && isRenderNonModifiableTemplates()));
     }
 
@@ -685,7 +733,7 @@ public class EnrollMakeNewRequestBean implements Serializable {
     }
 
     public boolean isEABrendered(){
-        final boolean result = (isKeyAlgorithmAvailable() || isTokenTypeAvilable()) && (getCertificateProfile() != null
+        final boolean result = (isKeyAlgorithmAvailable() || isTokenTypeAvailable()) && (getCertificateProfile() != null
                 && getCertificateProfile().getEabNamespaces() != null && !getCertificateProfile().getEabNamespaces().isEmpty());
         if (result && eabConfiguration == null) {
             eabConfiguration = raMasterApiProxyBean.getGlobalConfiguration(EABConfiguration.class);
@@ -693,31 +741,42 @@ public class EnrollMakeNewRequestBean implements Serializable {
         return result;
     }
 
+    public boolean isOtherDataRendered(){
+        return (isRenderSshEnrolmentFields() || isKeyAlgorithmAvailable() || isTokenTypeAvailable()) && isSendNotificationRendered();
+    }
+
+    public boolean isSendNotificationRendered(){
+        return getEndEntityProfile().isSendNotificationUsed();
+    }
+    public boolean isSendNotificationDisabled(){
+        return getEndEntityProfile().isSendNotificationRequired();
+    }
+
     /**
      * @return the provideRequestMetadataRendered
      */
     public boolean isProvideUserCredentialsRendered() {
-        return (isKeyAlgorithmAvailable() || isTokenTypeAvilable()) && (isUsernameRendered() || isPasswordRendered() || isEmailRendered());
+        return ( isRenderSshEnrolmentFields() || isKeyAlgorithmAvailable() || isTokenTypeAvailable()) && (isUsernameRendered() || isPasswordRendered() || isEmailRendered());
     }
 
     /**
      * @return the confirmRequestRendered
      */
     public boolean isConfirmRequestRendered() {
-        return isKeyAlgorithmAvailable() || isTokenTypeAvilable();
+        return  isRenderSshEnrolmentFields() || isKeyAlgorithmAvailable() || isTokenTypeAvailable();
     }
 
     /**
      * @return the provideRequestInfoRendered
      */
     public boolean isProvideRequestInfoRendered() {
-        return isKeyAlgorithmAvailable() || isTokenTypeAvilable();
+        return  !isRenderSshEnrolmentFields() && (isKeyAlgorithmAvailable() || isTokenTypeAvailable());
     }
 
     /**
      * @return true if a token type has been selected
      */
-    private boolean isTokenTypeAvilable() {
+    private boolean isTokenTypeAvailable() {
         return selectedTokenType > 0;
     }
 
@@ -759,6 +818,9 @@ public class EnrollMakeNewRequestBean implements Serializable {
     private void setProfileDefaults() {
         final EndEntityProfile endEntityProfile = getEndEntityProfile();
         cabfOrganizationIdentifier = endEntityProfile != null ? endEntityProfile.getCabfOrganizationIdentifier() : null;
+        sendNotification = endEntityProfile != null && endEntityProfile.isSendNotificationDefault();
+        certValidityStartTime = endEntityProfile != null ? endEntityProfile.getValidityStartTime() : null;
+        certValidityEndTime = endEntityProfile != null ? endEntityProfile.getValidityEndTime() : null;
     }
 
     //-----------------------------------------------------------------------------------------------
@@ -780,9 +842,14 @@ public class EnrollMakeNewRequestBean implements Serializable {
 
     public boolean isRenderOtherCertificateData() {
         return getEndEntityProfile().getUseExtensiondata() || getEndEntityProfile().isPsd2QcStatementUsed() || 
-                isCabfOrganizationIdentifierRendered() || getEndEntityProfile().isIssuanceRevocationReasonUsed();
+                isCabfOrganizationIdentifierRendered() || getEndEntityProfile().isIssuanceRevocationReasonUsed() ||
+                getEndEntityProfile().isValidityStartTimeUsed() || getEndEntityProfile().isValidityEndTimeUsed();
     }
 
+    public boolean isRenderOtherData() {
+        return getEndEntityProfile().isKeyRecoverableUsed();
+    }
+    
     public boolean isRenderCertExtensionDataField() {
         return getEndEntityProfile().getUseExtensiondata();
     }
@@ -793,6 +860,22 @@ public class EnrollMakeNewRequestBean implements Serializable {
 
     public boolean isRenderIssuanceRevocationReason() {
         return getEndEntityProfile().isIssuanceRevocationReasonUsed();
+    }
+    
+    public boolean isRenderCertValidityStartTime() {
+        return getEndEntityProfile().isValidityStartTimeUsed();
+    }
+
+    public boolean isRenderCertValidityEndTime() {
+        return getEndEntityProfile().isValidityEndTimeUsed();
+    }
+    
+    public boolean isCertValidityStartTimeModifiable() {
+        return getEndEntityProfile().isValidityStartTimeModifiable();
+    }
+    
+    public boolean isCertValidityEndTimeModifiable() {
+        return getEndEntityProfile().isValidityEndTimeModifiable();
     }
     
     public void setRenderCsrDetailedInfo(boolean renderCsrDetailedInfo) {
@@ -830,36 +913,34 @@ public class EnrollMakeNewRequestBean implements Serializable {
     public void uploadCsr() {
         subjectDn = null;
         validateCsr(certificateRequest);
-        //If PROVIDED BY USER key generation is selected, try fill Subject DN fields from CSR (Overwrite the fields set by previous CSR upload if any)
+        // If "Provided by User" key generation is selected, try fill Subject DN fields from CSR (Overwrite the fields set by previous CSR upload if any)
         if (getSelectedKeyPairGenerationEnum() != null && KeyPairGeneration.PROVIDED_BY_USER.equals(getSelectedKeyPairGenerationEnum()) && algorithmFromCsr != null) {
-            final PKCS10CertificationRequest pkcs10CertificateRequest = CertTools.getCertificateRequestFromPem(getCertificateRequest());
-            if (pkcs10CertificateRequest.getSubject() != null) {
-                populateRequestFields(RequestFieldType.DN, pkcs10CertificateRequest.getSubject().toString(), getSubjectDn().getRequiredFieldInstances());
+            final RequestMessage certRequest = RequestMessageUtils.parseRequestMessage(getCertificateRequest().getBytes(StandardCharsets.UTF_8));
+            if (certRequest.getRequestX500Name() != null) {
+                populateRequestFields(RequestFieldType.DN, certRequest.getRequestX500Name().toString(), getSubjectDn().getFieldInstances());
                 getSubjectDn().update();
             }
-            final Extension sanExtension = CertTools.getExtension(pkcs10CertificateRequest, Extension.subjectAlternativeName.getId());
-            if (sanExtension != null) {
-                populateRequestFields(RequestFieldType.AN, CertTools.getAltNameStringFromExtension(sanExtension), getSubjectAlternativeName().getRequiredFieldInstances());
-                getSubjectAlternativeName().update();
-            } else {
-                // If an updated CSR did not have any AN, make sure we clean the fields
-                this.subjectAlternativeName = null;
-            }
-            final Extension subjectDirectoryAttributes = CertTools.getExtension(pkcs10CertificateRequest, Extension.subjectDirectoryAttributes.getId());
-            if (subjectDirectoryAttributes != null) {
-                ASN1Primitive parsedValue = (ASN1Primitive) subjectDirectoryAttributes.getParsedValue();
-                try {
-                    final String subjectDirectoryAttributeString = SubjectDirAttrExtension.getSubjectDirectoryAttribute(parsedValue);
-                    populateRequestFields(RequestFieldType.DIRATTR, subjectDirectoryAttributeString, getSubjectDirectoryAttributes().getRequiredFieldInstances());
-                    getSubjectDirectoryAttributes().update();
-                } catch (ParseException | IllegalArgumentException e) {
-                    log.debug("Invalid Subject Directory Attributes Extension: " + e.getMessage());
-                    // If an updated CSR did not have any Directory attributes, make sure we clean the fields
-                    this.subjectDirectoryAttributes = null;
+            this.subjectAlternativeName = null;
+            this.subjectDirectoryAttributes = null;
+            // Populate SAN and Subject Directory Attributes, but only if it is a PKCS#10 (X.509) request
+            final PKCS10CertificationRequest pkcs10CertificateRequest = CertTools.getCertificateRequestFromPem(getCertificateRequest());
+            if (pkcs10CertificateRequest != null) {
+                final Extension sanExtension = CertTools.getExtension(pkcs10CertificateRequest, Extension.subjectAlternativeName.getId());
+                if (sanExtension != null) {
+                    populateRequestFields(RequestFieldType.AN, CertTools.getAltNameStringFromExtension(sanExtension), getSubjectAlternativeName().getFieldInstances());
+                    getSubjectAlternativeName().update();
                 }
-            } else {
-                // If an updated CSR did not have any Directory attributes, make sure we clean the fields
-                this.subjectDirectoryAttributes = null;
+                final Extension subjectDirectoryAttributes = CertTools.getExtension(pkcs10CertificateRequest, Extension.subjectDirectoryAttributes.getId());
+                if (subjectDirectoryAttributes != null) {
+                    ASN1Primitive parsedValue = (ASN1Primitive) subjectDirectoryAttributes.getParsedValue();
+                    try {
+                        final String subjectDirectoryAttributeString = SubjectDirAttrExtension.getSubjectDirectoryAttribute(parsedValue);
+                        populateRequestFields(RequestFieldType.DIRATTR, subjectDirectoryAttributeString, getSubjectDirectoryAttributes().getFieldInstances());
+                        getSubjectDirectoryAttributes().update();
+                    } catch (ParseException | IllegalArgumentException e) {
+                        log.debug("Invalid Subject Directory Attributes Extension: " + e.getMessage());
+                    }
+                }
             }
 
             uploadCsrDoneRendered = true;
@@ -931,6 +1012,10 @@ public class EnrollMakeNewRequestBean implements Serializable {
                     }
                 }
             }
+            if (RequestFieldType.DN.equals(type) && getCertificateProfile().getAllowDNOverride()) {
+                raLocaleBean.addMessageError(ENROLL_INVALID_CERTIFICATE_REQUEST_DN_FIELD, subjectField);
+                throw new ValidatorException(new FacesMessage(raLocaleBean.getMessage(ENROLL_INVALID_CERTIFICATE_REQUEST_DN_FIELD, subjectField)));
+            }
             if (log.isDebugEnabled()) {
                 log.debug("Unparsable subject " + type + " field '" + subjectField +
                         "' from CSR, field is invalid or not a modifiable option in the end entity profile.");
@@ -955,7 +1040,7 @@ public class EnrollMakeNewRequestBean implements Serializable {
             raLocaleBean.addMessageError(ENROLL_USERNAME_ALREADY_EXISTS, username);
         }
     }
-
+    
     /**
      * Calculate the summary of holders from the current state for the certificate Subjects
      */
@@ -966,7 +1051,11 @@ public class EnrollMakeNewRequestBean implements Serializable {
     }
 
     public void addEndEntity() {
-        addEndEntityAndGenerateToken(EndEntityConstants.TOKEN_USERGEN, null);
+        if(isRenderSshEnrolmentFields()) {
+            enrollSshCertificate();
+        } else {
+            addEndEntityAndGenerateToken(EndEntityConstants.TOKEN_USERGEN, null);
+        }
     }
 
     public void addEndEntityAndGenerateCertificateDer() {
@@ -996,7 +1085,7 @@ public class EnrollMakeNewRequestBean implements Serializable {
 
     public void addEndEntityAndgenerateBcfks() {
         byte[] token = addEndEntityAndGenerateToken(EndEntityConstants.TOKEN_SOFT_BCFKS, null);
-        downloadToken(token, APPLICATION_X_PKCS12, ".p12");
+        downloadToken(token, APPLICATION_OCTET_STREAM, ".bcfks");
     }
 
     public void addEndEntityAndGenerateJks() {
@@ -1009,12 +1098,48 @@ public class EnrollMakeNewRequestBean implements Serializable {
         downloadToken(token, APPLICATION_OCTET_STREAM, ".pem");
     }
 
-    private ExtendedInformation getProcessedExtendedInformation() {
+    private ExtendedInformation getProcessedExtendedInformation() throws CertificateExtensionException {
         final ExtendedInformation extendedInformation = new ExtendedInformation();
         final Properties properties = new Properties();
         
         extendedInformation.setMaxLoginAttempts(getEndEntityProfile().getMaxFailedLogins());
         extendedInformation.setRemainingLoginAttempts(getEndEntityProfile().getMaxFailedLogins());
+        
+        if (getEndEntityProfile().isValidityStartTimeUsed() && certValidityStartTime != null) {
+            certValidityStartTime = certValidityStartTime.trim();
+            if (certValidityStartTime.length() > 0) {
+                String certValidityStartTimeValue;
+                try {
+                    certValidityStartTimeValue = getImpliedUTCFromISO8601OrRelative(certValidityStartTime);
+                } catch (ParseException e) {
+                    if (log.isDebugEnabled()) {
+                        log.debug("Incorrectly formatted or invalid certificate start time!");
+                    }
+                    raLocaleBean.addMessageError(ENROLL_INVALID_CERTIFICATE_REQUEST);
+                    throw new IllegalStateException(e);
+                }
+                extendedInformation.setCustomData(ExtendedInformation.CUSTOM_STARTTIME, certValidityStartTimeValue);
+                getEndEntityProfile().setValidityStartTime(certValidityStartTimeValue);
+            }
+        }
+        
+        if (getEndEntityProfile().isValidityEndTimeUsed() && certValidityEndTime != null) {
+            certValidityEndTime = certValidityEndTime.trim();
+            if (certValidityEndTime.length() > 0) {
+                String certValidityEndTimeValue;
+                try {
+                    certValidityEndTimeValue = getImpliedUTCFromISO8601OrRelative(certValidityEndTime);
+                } catch (ParseException e) {
+                    if (log.isDebugEnabled()) {
+                        log.debug("Incorrectly formatted or invalid certificate end time!");
+                    }
+                    raLocaleBean.addMessageError(ENROLL_INVALID_CERTIFICATE_REQUEST);
+                    throw new IllegalStateException(e);
+                }
+                extendedInformation.setCustomData(ExtendedInformation.CUSTOM_ENDTIME, certValidityEndTimeValue);
+                getEndEntityProfile().setValidityEndTime(certValidityEndTimeValue);
+            }
+        }
         
         if (getUserDefinedValidityIfSpecified() != null) {
             extendedInformation.setCertificateEndTime(getUserDefinedValidityIfSpecified());
@@ -1066,23 +1191,73 @@ public class EnrollMakeNewRequestBean implements Serializable {
             }
         }
         
+
+        if(nameConstraintPermitted!=null && !StringUtils.isBlank(nameConstraintPermitted)) {
+            extendedInformation.setNameConstraintsPermitted(
+                    NameConstraint.parseNameConstraintsList(nameConstraintPermitted));
+        }
+        
+        if(nameConstraintExcluded!=null && !StringUtils.isBlank(nameConstraintExcluded)) {
+            extendedInformation.setNameConstraintsExcluded(
+                    NameConstraint.parseNameConstraintsList(nameConstraintExcluded));
+        }
+        
         return extendedInformation;
     }
     
+    private String getImpliedUTCFromISO8601OrRelative(final String certValidityTime) throws ParseException {
+        if (StringUtils.isEmpty(certValidityTime)) {
+            return "";
+        }
+        if (!isRelativeDateTime(certValidityTime)) {
+            return getImpliedUTCFromISO8601(certValidityTime);
+        }
+        return certValidityTime;
+    }
+    
+    private String getImpliedUTCFromISO8601(final String dateString) throws ParseException {
+        return ValidityDate.getImpliedUTCFromISO8601(dateString);
+    }
+    
+    private boolean isRelativeDateTime(final String dateString) {
+        return dateString.matches("^\\d+:\\d?\\d:\\d?\\d$");
+    }
+
     /**
      * Adds end entity and creates its token that will be downloaded. This method is responsible for deleting the end entity if something goes wrong with token creation.
      *
      * @param tokenType         the type of the token that will be created (one of: TOKEN_USERGEN, TOKEN_SOFT_P12, TOKEN_SOFT_JKS from EndEntityConstants)
      * @param tokenDownloadType the download type/format of the token. This is used only with TOKEN_USERGEN since this is the only one that have different formats: PEM, DER,...)
      * @return generated token as byte array or null if token could not be generated
+     * @throws ParseException 
      */
     private byte[] addEndEntityAndGenerateToken(int tokenType, TokenDownloadType tokenDownloadType) {
+        // Fill subjectDn email fields
+        for(EndEntityProfile.FieldInstance instance: getSubjectDn().getFieldInstances()) {
+            if (instance.isUseDataFromEmailField()) {
+                instance.setValue(getEndEntityInformation().getEmail());
+            }
+        }
+
         //Update the EndEntityInformation data
         getSubjectDn().update();
         getSubjectAlternativeName().update();
         getSubjectDirectoryAttributes().update();
-
-        //Fill End Entity information
+        
+        // Workaround.
+        // Corrections for SAN rfc822name and UPN (which might be a valid e-mail)
+        for (EndEntityProfile.FieldInstance field : getSubjectAlternativeName().getOptionalFieldInstances()) {
+            // An optional and modifiable SAN rfc822name or UPN field with a domain or list of domains can be left blank.
+            if (field.isUpnRfc() && field.isSelectableValuesUpnRfcDomainOnly() && field.getSelectableValuesUpnRfc().contains(field.getValue())
+                    && !field.getValue().contains("@")) {
+                field.setValue("");
+            }
+            // An optional (or modifiable) SAN rfc822name and UPN using the EE e-mail can be disabled.  
+            if (field.isUpnRfc() && field.isUsed() && !field.getRfcEmailUsed() && !field.getValue().contains("@")) {
+                field.setValue("");
+            }
+        }
+        
         final EndEntityInformation endEntityInformation = getEndEntityInformation();
 
         endEntityInformation.setCAId(getCAInfo().getCAId());
@@ -1090,16 +1265,21 @@ public class EnrollMakeNewRequestBean implements Serializable {
         endEntityInformation.setCertificateProfileId(authorizedCertificateProfiles.get(Integer.parseInt(getSelectedCertificateProfile())).getId());
         endEntityInformation.setDN(getSubjectDn().toString());
         endEntityInformation.setEndEntityProfileId(authorizedEndEntityProfiles.get(Integer.parseInt(getSelectedEndEntityProfile())).getId());
-        endEntityInformation.setExtendedInformation(getProcessedExtendedInformation());
+        
+        try {
+            endEntityInformation.setExtendedInformation(getProcessedExtendedInformation());
+        } catch(CertificateExtensionException e) {
+            reportGenericError(null, e);
+            return null;
+        }
         endEntityInformation.setStatus(EndEntityConstants.STATUS_NEW);
         endEntityInformation.setSubjectAltName(getSubjectAlternativeName().toString());
         endEntityInformation.setTimeCreated(new Date());
         endEntityInformation.setTimeModified(new Date());
         endEntityInformation.setType(new EndEntityType(EndEntityTypes.ENDUSER));
         // sendnotification, keyrecoverable and print must be set after setType, because it adds to the type
-        endEntityInformation.setSendNotification(getEndEntityProfile().isSendNotificationUsed() && getEndEntityProfile().isSendNotificationDefault() && !endEntityInformation.getSendNotification());
-        endEntityInformation.setKeyRecoverable(getEndEntityProfile().isKeyRecoverableUsed() && getEndEntityProfile().isKeyRecoverableDefault() && !endEntityInformation.getKeyRecoverable());
-        endEntityInformation.setPrintUserData(false); // TODO not sure...
+        endEntityInformation.setKeyRecoverable(getKeyRecoverableUse());
+        endEntityInformation.setSendNotification(getSendNotification());
         endEntityInformation.setTokenType(tokenType);
         
         // Fill end-entity information (Username and Password)
@@ -1108,7 +1288,7 @@ public class EnrollMakeNewRequestBean implements Serializable {
         random.nextBytes(randomData);
         if (StringUtils.isBlank(endEntityInformation.getUsername())) {
             String autousername = new String(Hex.encode(randomData));
-            while (raMasterApiProxyBean.searchUser(raAuthenticationBean.getAuthenticationToken(), autousername) != null) {
+            while (raMasterApiProxyBean.searchUserWithoutViewEndEntityAccessRule(raAuthenticationBean.getAuthenticationToken(), autousername) != null) {
                 if (log.isDebugEnabled()) {
                     log.debug("Autogenerated username '" + autousername + "' is already reserved. Generating the new one...");
                 }
@@ -1138,7 +1318,7 @@ public class EnrollMakeNewRequestBean implements Serializable {
             }
         } else if (KeyPairGeneration.PROVIDED_BY_USER.equals(getSelectedKeyPairGenerationEnum())) {
             try {
-                endEntityInformation.getExtendedInformation().setCertificateRequest(CertTools.getCertificateRequestFromPem(getCertificateRequest()).getEncoded());
+                endEntityInformation.getExtendedInformation().setCertificateRequest(getCertificateRequestBytes());
             } catch (IOException e) {
                 raLocaleBean.addMessageError(ENROLL_INVALID_CERTIFICATE_REQUEST);
                 return null;
@@ -1158,31 +1338,36 @@ public class EnrollMakeNewRequestBean implements Serializable {
                     log.info("Certificate could not be generated for end entity with username " + endEntityInformation.getUsername());
                 }
             } else if (KeyPairGeneration.PROVIDED_BY_USER.equals(getSelectedKeyPairGenerationEnum())) {
-                endEntityInformation.getExtendedInformation().setCertificateRequest(CertTools.getCertificateRequestFromPem(getCertificateRequest()).getEncoded());
+                endEntityInformation.getExtendedInformation().setCertificateRequest(getCertificateRequestBytes());
                 final byte[] certificateDataToDownload = raMasterApiProxyBean.addUserAndCreateCertificate(raAuthenticationBean.getAuthenticationToken(),
                         endEntityInformation, false);
                 if (certificateDataToDownload == null) {
                     raLocaleBean.addMessageError("enroll_certificate_could_not_be_generated", endEntityInformation.getUsername(), "Check server log");
                     log.info("Certificate could not be generated for end entity with username " + endEntityInformation.getUsername());
                 } else if (tokenDownloadType == TokenDownloadType.PEM_FULL_CHAIN) {
-                    X509Certificate certificate = CertTools.getCertfromByteArray(certificateDataToDownload, X509Certificate.class);
+                    final Certificate certificate = CertTools.getCertfromByteArray(certificateDataToDownload, Certificate.class);
                     LinkedList<Certificate> chain = new LinkedList<>(getCAInfo().getCertificateChain());
                     chain.addFirst(certificate);
                     ret = CertTools.getPemFromCertificateChain(chain);
                 } else if (tokenDownloadType == TokenDownloadType.PKCS7) {
-                    X509Certificate certificate = CertTools.getCertfromByteArray(certificateDataToDownload, X509Certificate.class);
+                    final Certificate certificate = CertTools.getCertfromByteArray(certificateDataToDownload, Certificate.class);
                     LinkedList<Certificate> chain = new LinkedList<>(getCAInfo().getCertificateChain());
                     chain.addFirst(certificate);
                     ret = CertTools.getPemFromPkcs7(CertTools.createCertsOnlyCMS(CertTools.convertCertificateChainToX509Chain(chain)));
                 } else if (tokenDownloadType == TokenDownloadType.PEM) {
-                    X509Certificate certificate = CertTools.getCertfromByteArray(certificateDataToDownload, X509Certificate.class);
-                    ret = CertTools.getPemFromCertificateChain(Arrays.asList((Certificate) certificate));
+                    final Certificate certificate = CertTools.getCertfromByteArray(certificateDataToDownload, Certificate.class);
+                    ret = CertTools.getPemFromCertificateChain(List.of(certificate));
                 } else {
                     ret = certificateDataToDownload;
                 }
             } else if (KeyPairGeneration.POSTPONE.equals(getSelectedKeyPairGenerationEnum())) {
                 endEntityInformation.setTokenType(selectedTokenType);
-                raMasterApiProxyBean.addUser(raAuthenticationBean.getAuthenticationToken(), endEntityInformation, false);
+                boolean canUseClearPwd = useClearPassword;
+                log.info("canUseClearPwd: " + canUseClearPwd + ", " + selectedTokenType + ", " + getEndEntityProfile().useAutoGeneratedPasswd());
+                if (selectedTokenType < 2 || getEndEntityProfile().useAutoGeneratedPasswd()) { // for clearPwd: selected token type and not generated by user
+                    canUseClearPwd = false;
+                }
+                raMasterApiProxyBean.addUser(raAuthenticationBean.getAuthenticationToken(), endEntityInformation, canUseClearPwd);
                 if (!isRequestIdInfoRendered()) {
                     raLocaleBean.addMessageInfo("enroll_end_entity_has_been_successfully_added", endEntityInformation.getUsername());
                 }
@@ -1207,7 +1392,12 @@ public class EnrollMakeNewRequestBean implements Serializable {
                 } else if (errorCode.equals(ErrorCode.USER_DOESNT_FULFILL_END_ENTITY_PROFILE)) {
                     raLocaleBean.addMessageError("enroll_user_does_not_fulfill_profile", cleanExceptionMessage(e));
                     log.info("End entity information does not fulfill profile: " + e.getMessage() + ", " + errorCode);
-                } else {
+                } else if (errorCode.equals(ErrorCode.NAMECONSTRAINT_VIOLATION)) {
+                    raLocaleBean.addMessageError("enroll_invalid_name_constraint_violation", e.getMessage().replaceFirst("^[^:]*Exception: ", ""));
+                    log.info("End entity information does not fulfill profile: " + e.getMessage() + ", " + errorCode);
+                }
+                
+                else {
                     reportGenericError(errorCode, e);
                 }
             } else {
@@ -1216,7 +1406,6 @@ public class EnrollMakeNewRequestBean implements Serializable {
         } catch (Exception e) {
             reportGenericError(null, e);
         } finally {
-            cleanUpEndEntities(errorCode, ret);
             endEntityInformation.setUsername(StringUtils.EMPTY);
         }
         return ret;
@@ -1275,31 +1464,9 @@ public class EnrollMakeNewRequestBean implements Serializable {
     private String cleanExceptionMessage(final Throwable e) {
         String message = ExceptionUtils.getRootCauseMessage(e);
         if (message != null) {
-            message = message.replaceFirst("^[^:]*EndEntityProfileValidationException: ", "");
+            message = message.replaceFirst("^[^:]*Exception: ", "");
         }
         return message;
-    }
-
-    /**
-     * End entity clean-up must be done if enrollment could not be completed (but end-entity has been added and wasn't already existing)
-     */
-    private void cleanUpEndEntities(final ErrorCode errorCode, final byte[] certificate) {
-        if (certificate == null) {
-            if ((errorCode == null || !errorCode.equals(ErrorCode.USER_ALREADY_EXISTS))
-                    && !KeyPairGeneration.POSTPONE.equals(getSelectedKeyPairGenerationEnum())) {
-                EndEntityInformation endEntityInfoFromCA = raMasterApiProxyBean.searchUser(raAuthenticationBean.getAuthenticationToken(),
-                        endEntityInformation.getUsername());
-                try {
-                    if (endEntityInfoFromCA != null && endEntityInfoFromCA.getStatus() != EndEntityConstants.STATUS_GENERATED) {
-                        raMasterApiProxyBean.deleteUser(raAuthenticationBean.getAuthenticationToken(), endEntityInformation.getUsername());
-                    }
-                } catch (AuthorizationDeniedException e) {
-                    throw new IllegalStateException(e);
-                }
-            }
-        } else {
-            return; // We simply return since certificate is generated and EE must not be deleted.
-        }
     }
 
     /**
@@ -1335,7 +1502,10 @@ public class EnrollMakeNewRequestBean implements Serializable {
      * @return the file name to use in the content disposition header, filename safe characters
      */
     private String getFileName() {
-        final String commonName = CertTools.getPartFromDN(getEndEntityInformation().getDN(), "CN");
+        String commonName = CertTools.getPartFromDN(getEndEntityInformation().getDN(), "CN");
+        if(isRenderSshEnrolmentFields()) {
+            commonName = getSshKeyId();
+        }
         if (StringUtils.isEmpty(commonName)) {
             return "certificatetoken";
         }
@@ -1345,20 +1515,57 @@ public class EnrollMakeNewRequestBean implements Serializable {
         return Base64.encodeBase64String(commonName.getBytes());
     }
 
+    private void updateRfcAltNameField(final UIInput input) {
+        // If triggered with check box e-mail field, updates on field.
+        // Split the clientId on ':', the second to last substring is the loop index
+        final String[] split = input.getClientId().split(":");
+        final int index = Integer.parseInt(split[split.length - 2]);
+    
+        EndEntityProfile.FieldInstance rfc822Name = null;
+        if (input.getClientId().startsWith("requestInfoForm:subjectAlternativeNameOptional")) {
+            List<FieldInstance> fi = (List<EndEntityProfile.FieldInstance>) subjectAlternativeName.getOptionalFieldInstances();
+            if (index >= 0 && index < fi.size()) {
+                rfc822Name = fi.get(index); 
+            }
+        } else {
+            List<FieldInstance> fi = (List<EndEntityProfile.FieldInstance>) subjectAlternativeName.getRequiredFieldInstances();
+            if (index >= 0 && index < fi.size()) {
+                rfc822Name = fi.get(index); 
+            }
+        }
+        if (rfc822Name != null) {
+            final String email = getEndEntityInformation().getEmail();
+            if (rfc822Name.getRfcEmailUsed() && email != null) {
+                rfc822Name.setValue(email);
+                return;
+            }
+            rfc822Name.setValue("");
+        }
+    }
+    
     /**
      * Update RFC822NAME with value from end entity email
      */
-    public void updateRfcAltName() {
-        EndEntityProfile.FieldInstance rfc822Name = subjectAlternativeName.getFieldInstancesMap().get(DnComponents.RFC822NAME).get(0);
-        if (rfc822Name != null) {
-            if (rfc822Name.getRfcEmailUsed()) {
-                String email = getEndEntityInformation().getEmail();
-                if (email != null) {
-                    rfc822Name.setValue(email);
-                    return;
+    public void updateRfcAltName(AjaxBehaviorEvent event) {
+        final UIComponent components = event.getComponent();
+        final UIInput emailInput = (UIInput) components.findComponent("upnRfcEmail");
+        final UIInput emailInput2 = (UIInput) components.findComponent("upnRfcEmail2");
+        if (emailInput != null) {
+            updateRfcAltNameField(emailInput);
+        } else if (emailInput2 != null) {
+        	// Workaround to render an unmodifiable e-mail as h:outputtext 
+            updateRfcAltNameField(emailInput2);
+        } else {
+            // If triggered with releasing focus on the EE e-mail field, updates all
+            final String email = getEndEntityInformation().getEmail();
+            if (email != null) {
+                final Map<Integer,FieldInstance> map = subjectAlternativeName.getFieldInstancesMap().get(DnComponents.RFC822NAME);
+                for (FieldInstance fi : map.values()) {
+                    if (fi.isRfcUseEmail()) {
+                        fi.setValue(email);
+                    }
                 }
             }
-            rfc822Name.setValue("");
         }
     }
 
@@ -1430,47 +1637,88 @@ public class EnrollMakeNewRequestBean implements Serializable {
             }
         }
     }
+    
+    public final void validateUpnRfcEmail(ComponentSystemEvent event) {
+        final FacesContext fc = FacesContext.getCurrentInstance();
+        final UIComponent components = event.getComponent();
+        UIInput field = (UIInput) components.findComponent("upnRfcEmail");
+        // Workaround to render an unmodifiable e-mail field in SAN.
+        if (field == null || field.getLocalValue() == null || field.getLocalValue().toString().isEmpty()) {
+            field = (UIInput) components.findComponent("upnRfcEmail2");
+        }
+        final String value = field.getLocalValue() == null ? "" : field.getLocalValue().toString().trim();
+        if (!value.isEmpty()) {
+            final UIComponent domainField = (UIComponent) components.findComponent("upnRfcDomain");
+            if (domainField != null && domainField.isRendered()) {
+                if (log.isDebugEnabled()) {
+                    log.debug("Validate SAN rfc822name e-mail user part: " + value);
+                }
+                if (!StringTools.isValidEmailUserPart(value)) {
+                    fc.addMessage(field.getClientId(fc), raLocaleBean.getFacesMessage("enroll_san_email_user_part_invalid"));
+                    fc.renderResponse();
+                }
+            } else {
+                if (log.isDebugEnabled()) {
+                    log.debug("Validate SAN rfc822name e-mail: " + value);
+                }
+                if (!StringTools.isValidEmail(value)) {
+                    field.setValue(value);
+                    fc.addMessage(field.getClientId(fc), raLocaleBean.getFacesMessage("enroll_san_email_invalid"));
+                    fc.renderResponse();
+                }
+            }
+        }
+    }
 
     public void actionUpdateCsrInfoFields() {
         String fileName = uploadFile.getName();
 
         csrFileName = fileName;
-
-        String fileContents;
+        byte[] fileContents;
+        String pemEncodedCsr;
         try {
-            fileContents = new String(uploadFile.getBytes());
+            fileContents = IOUtils.toByteArray(uploadFile.getInputStream(), uploadFile.getSize());
+            String fileContentString = new String(fileContents);
+            if (fileContentString.startsWith(CertTools.BEGIN_CERTIFICATE_REQUEST)||
+                    fileContentString.startsWith(CertTools.BEGIN_KEYTOOL_CERTIFICATE_REQUEST)) {
+                pemEncodedCsr = new String(fileContents);
+            } else {
+                pemEncodedCsr = new String(CertTools.getPEMFromCertificateRequest(fileContents));
+            }
         } catch (IOException e) {
             raLocaleBean.addMessageError(ENROLL_INVALID_CERTIFICATE_REQUEST);
             throw new ValidatorException(new FacesMessage(raLocaleBean.getMessage(ENROLL_INVALID_CERTIFICATE_REQUEST)));
         }
 
-        validateCsr(fileContents);
+        validateCsr(pemEncodedCsr);
         if (algorithmFromCsr != null) { // valid CSR
             uploadCsr();
         }
     }
-
     /**
      * Validate an uploaded CSR and store the extracted key algorithm and CSR for later use.
      */
     public final void validateCsr(String csrValue) throws ValidatorException {
         algorithmFromCsr = null;
-        if (csrValue != null && csrValue.length() > EnrollMakeNewRequestBean.MAX_CSR_LENGTH) {
-            log.info("CSR uploaded was too large: " + csrValue.length());
+        if (csrValue == null || csrValue.length() > EnrollMakeNewRequestBean.MAX_CSR_LENGTH) {
+            if (csrValue == null) {
+                log.info("CSR uploaded was null");
+            } else {
+                log.info("CSR uploaded was too large: " + csrValue.length());
+            }
             raLocaleBean.addMessageError(ENROLL_INVALID_CERTIFICATE_REQUEST);
             throw new ValidatorException(new FacesMessage(raLocaleBean.getMessage(ENROLL_INVALID_CERTIFICATE_REQUEST)));
         }
-        PKCS10CertificationRequest pkcs10CertificateRequest = CertTools.getCertificateRequestFromPem(csrValue);
-        if (pkcs10CertificateRequest == null) {
+        final RequestMessage certRequest = RequestMessageUtils.parseRequestMessage(csrValue.getBytes(StandardCharsets.UTF_8));
+        if (certRequest == null) {
             raLocaleBean.addMessageError(ENROLL_INVALID_CERTIFICATE_REQUEST);
             throw new ValidatorException(new FacesMessage(raLocaleBean.getMessage(ENROLL_INVALID_CERTIFICATE_REQUEST)));
         }
-
         //Get public key algorithm from CSR and check if it's allowed in certificate profile
-        final JcaPKCS10CertificationRequest jcaPKCS10CertificationRequest = new JcaPKCS10CertificationRequest(pkcs10CertificateRequest);
         try {
-            final String keySpecification = AlgorithmTools.getKeySpecification(jcaPKCS10CertificationRequest.getPublicKey());
-            final String keyAlgorithm = AlgorithmTools.getKeyAlgorithm(jcaPKCS10CertificationRequest.getPublicKey());
+            final PublicKey publicKey = certRequest.getRequestPublicKey();
+            final String keySpecification = AlgorithmTools.getKeySpecification(publicKey);
+            final String keyAlgorithm = AlgorithmTools.getKeyAlgorithm(publicKey);
 
             final CertificateProfile certificateProfile = getCertificateProfile();
             if (!certificateProfile.isKeyTypeAllowed(keyAlgorithm, keySpecification)) {
@@ -1479,21 +1727,31 @@ public class EnrollMakeNewRequestBean implements Serializable {
             }
             algorithmFromCsr = keyAlgorithm + " " + keySpecification;// Save for later use
 
-            certificateRequest = csrValue;
-
-            PublicKey publicKey = jcaPKCS10CertificationRequest.getPublicKey();
             publicKeyModulus = KeyTools.getKeyModulus(publicKey);
 
             publicKeyExponent = KeyTools.getKeyPublicExponent(publicKey);
-            sha256Fingerprint = KeyTools.getSha256Fingerprint(certificateRequest);
-            signature = KeyTools.getCertificateRequestSignature(jcaPKCS10CertificationRequest);
-
+            sha256Fingerprint = KeyTools.getSha256Fingerprint(csrValue);
+            signature = extractSignatureFromCsr(certRequest);
+            certificateRequest = csrValue;
         } catch (InvalidKeyException | NoSuchAlgorithmException e) {
             raLocaleBean.addMessageError("enroll_unknown_key_algorithm");
             throw new ValidatorException(new FacesMessage(raLocaleBean.getMessage("enroll_unknown_key_algorithm")));
+        } catch (NoSuchProviderException e) {
+            throw new IllegalStateException(e);
         }
     }
 
+    private String extractSignatureFromCsr(final RequestMessage certRequest) {
+        if (certRequest instanceof PKCS10RequestMessage) {
+            final PKCS10CertificationRequest p10 = ((PKCS10RequestMessage) certRequest).getCertificationRequest();
+            final JcaPKCS10CertificationRequest jcaPKCS10CertificationRequest = new JcaPKCS10CertificationRequest(p10);
+            return KeyTools.getCertificateRequestSignature(jcaPKCS10CertificationRequest);
+        } else {
+            // CVC requests can have multiple signatures. SSH requests don't have a signature.
+            log.debug("Not showing signature field for this type of CSR");
+            return null;
+        }
+    }
 
     //-----------------------------------------------------------------------------------------------
     // Getters and setters
@@ -1540,6 +1798,58 @@ public class EnrollMakeNewRequestBean implements Serializable {
         return null;
     }
 
+    public boolean isNameConstraintPermittedRendered() {
+        EndEntityProfile endEntityProfile = getEndEntityProfile();
+        if(endEntityProfile == null) {
+            return false;
+        }
+        
+        return endEntityProfile.isNameConstraintsPermittedUsed();
+    }
+    
+    public boolean isNameConstraintPermittedRequired() {
+        EndEntityProfile endEntityProfile = getEndEntityProfile();
+        if(endEntityProfile == null) {
+            return false;
+        }
+        
+        return endEntityProfile.isNameConstraintsPermittedRequired();
+    }    
+
+    public String getNameConstraintPermitted() {
+        return nameConstraintPermitted;
+    }
+
+    public void setNameConstraintPermitted(String nameConstraintPermitted) {
+        this.nameConstraintPermitted = nameConstraintPermitted;
+    }
+    
+    public boolean isNameConstraintExcludedRendered() {
+        EndEntityProfile endEntityProfile = getEndEntityProfile();
+        if(endEntityProfile == null) {
+            return false;
+        }
+        
+        return endEntityProfile.isNameConstraintsExcludedUsed();
+    }
+    
+    public boolean isNameConstraintExcludedRequired() {
+        EndEntityProfile endEntityProfile = getEndEntityProfile();
+        if(endEntityProfile == null) {
+            return false;
+        }
+        
+        return endEntityProfile.isNameConstraintsExcludedRequired();
+    }    
+
+    public String getNameConstraintExcluded() {
+        return nameConstraintExcluded;
+    }
+
+    public void setNameConstraintExcluded(String nameConstraintExcluded) {
+        this.nameConstraintExcluded = nameConstraintExcluded;
+    }
+    
     /**
      * @return The user-defined validity for the private key.
      */
@@ -1669,12 +1979,15 @@ public class EnrollMakeNewRequestBean implements Serializable {
     private List<KeyPairGeneration> getAvailableKeyPairGenerations() {
         final List<KeyPairGeneration> ret = new ArrayList<>();
         final EndEntityProfile endEntityProfile = getEndEntityProfile();
-        if (endEntityProfile != null) {
+        if (endEntityProfile != null && getSelectedCertificateProfile()!=null) {
             final String availableKeyStores = endEntityProfile.getValue(EndEntityProfile.AVAILKEYSTORE, 0);
-            if (availableKeyStores.contains(String.valueOf(SecConst.TOKEN_SOFT_P12))
-                    || availableKeyStores.contains(String.valueOf(SecConst.TOKEN_SOFT_JKS))
-                    || availableKeyStores.contains(String.valueOf(SecConst.TOKEN_SOFT_PEM))) {
-                ret.add(KeyPairGeneration.ON_SERVER);
+            if(this.authorizedCertificateProfiles.getValue(Integer.parseInt(getSelectedCertificateProfile()))
+                    .getType() != CertificateConstants.CERTTYPE_SSH) {
+                if (availableKeyStores.contains(String.valueOf(SecConst.TOKEN_SOFT_P12))
+                        || availableKeyStores.contains(String.valueOf(SecConst.TOKEN_SOFT_JKS))
+                        || availableKeyStores.contains(String.valueOf(SecConst.TOKEN_SOFT_PEM))) {
+                    ret.add(KeyPairGeneration.ON_SERVER);
+                }
             }
             if (availableKeyStores.contains(String.valueOf(SecConst.TOKEN_SOFT_BROWSERGEN))) {
                 ret.add(KeyPairGeneration.PROVIDED_BY_USER);
@@ -1913,7 +2226,7 @@ public class EnrollMakeNewRequestBean implements Serializable {
                                 continue;
                             }
                             final int bitLength = AlgorithmTools.getNamedEcCurveBitLength(ecNamedCurve);
-                            if (availableBitLengths.contains(Integer.valueOf(bitLength))) {
+                            if (availableBitLengths.contains(bitLength)) {
                                 ecChoices.add(ecNamedCurve);
                             }
                         }
@@ -1931,13 +2244,13 @@ public class EnrollMakeNewRequestBean implements Serializable {
                                 + StringTools.getAsStringWithSeparator(" / ", AlgorithmTools.getAllCurveAliasesFromAlias(ecNamedCurve))));
                     }
                 }
-                for (final String algName : CesecoreConfiguration.getExtraAlgs()) {
-                    if (availableKeyAlgorithms.contains(CesecoreConfiguration.getExtraAlgTitle(algName))) {
+                for (final String algName : AlgorithmConfigurationCache.INSTANCE.getConfigurationDefinedAlgorithms()) {
+                    if (availableKeyAlgorithms.contains(AlgorithmConfigurationCache.INSTANCE.getConfigurationDefinedAlgorithmTitle(algName))) {
                         for (final String subAlg : CesecoreConfiguration.getExtraAlgSubAlgs(algName)) {
                             final String name = CesecoreConfiguration.getExtraAlgSubAlgName(algName, subAlg);
                             final int bitLength = AlgorithmTools.getNamedEcCurveBitLength(name);
-                            if (availableBitLengths.contains(Integer.valueOf(bitLength))) {
-                                availableAlgorithmSelectItems.add(new SelectItem(CesecoreConfiguration.getExtraAlgTitle(algName) + "_" + name,
+                            if (availableBitLengths.contains(bitLength)) {
+                                availableAlgorithmSelectItems.add(new SelectItem(AlgorithmConfigurationCache.INSTANCE.getConfigurationDefinedAlgorithmTitle(algName) + "_" + name,
                                         CesecoreConfiguration.getExtraAlgSubAlgTitle(algName, subAlg)));
                             } else {
                                 if (log.isTraceEnabled()) {
@@ -1961,7 +2274,7 @@ public class EnrollMakeNewRequestBean implements Serializable {
      * Sort the provided list by label with the exception of any item with null value that ends up first.
      */
     protected static void sortSelectItemsByLabel(final List<SelectItem> items) {
-        Collections.sort(items, new Comparator<SelectItem>() {
+        items.sort(new Comparator<SelectItem>() {
             @Override
             public int compare(final SelectItem item1, final SelectItem item2) {
                 if (item1.getValue() == null || (item1.getValue() instanceof String && ((String) item1.getValue()).isEmpty())) {
@@ -2067,6 +2380,14 @@ public class EnrollMakeNewRequestBean implements Serializable {
         this.accountBindingId = accountBindingId;
     }
 
+    public Boolean getSendNotification() {
+        return sendNotification;
+    }
+
+    public void setSendNotification(Boolean sendNotification) {
+        this.sendNotification = sendNotification;
+    }
+
     public String getPsd2NcaName() {
         return psd2NcaName;
     }
@@ -2091,6 +2412,23 @@ public class EnrollMakeNewRequestBean implements Serializable {
         selectedPsd2PspRoles = new ArrayList<>(roles);
     }
 
+    public String getCertValidityStartTime() {
+        return certValidityStartTime;
+    }
+
+    public void setCertValidityStartTime(String certValidityStartTime) {
+        this.certValidityStartTime = certValidityStartTime;
+    }
+
+    public String getCertValidityEndTime() {
+        return certValidityEndTime;
+    }
+
+    public void setCertValidityEndTime(String certValidityEndTime) {
+        this.certValidityEndTime = certValidityEndTime;
+    }
+
+    
     public String getCabfOrganizationIdentifier() {
         return cabfOrganizationIdentifier;
     }
@@ -2100,8 +2438,7 @@ public class EnrollMakeNewRequestBean implements Serializable {
     }
 
     public boolean isCabfOrganizationIdentifierRendered() {
-        return getEndEntityProfile().isCabfOrganizationIdentifierUsed() &&
-                (isRenderNonModifiableFields() || isCabfOrganizationIdentifierModifiable());
+        return getEndEntityProfile().isCabfOrganizationIdentifierUsed();
     }
 
     public boolean isCabfOrganizationIdentifierModifiable() {
@@ -2132,6 +2469,33 @@ public class EnrollMakeNewRequestBean implements Serializable {
      */
     public String getCabfOrganizationIdentifierRegex() {
         return CabForumOrganizationIdentifier.VALIDATION_REGEX;
+    }
+    
+    public boolean isUseKeyRecoverable() {
+        if (getEndEntityProfile()!= null) {
+            return getEndEntityProfile().isKeyRecoverableUsed();
+        }
+        return false;
+    }
+
+    public boolean isKeyRecoveryRequired() {
+        if (getEndEntityProfile() != null && getEndEntityProfile().isKeyRecoverableUsed()) {
+            return getEndEntityProfile().isKeyRecoverableRequired();
+        }
+        return false;
+    }
+    
+    public boolean getKeyRecoverableUse() {
+        if (useKeyRecoverable != null) {
+            return useKeyRecoverable;
+        } else if (getEndEntityProfile() != null) {
+            return (getEndEntityProfile().isKeyRecoverableUsed() || getEndEntityProfile().isKeyRecoverableDefault());
+        }
+        return false;
+    }
+    
+    public void setKeyRecoverableUse(boolean keyRecoverable) {
+        useKeyRecoverable = keyRecoverable;
     }
 
     /**
@@ -2199,6 +2563,13 @@ public class EnrollMakeNewRequestBean implements Serializable {
         return authorizedCertificateProfiles;
     }
 
+    private boolean hasAnyField(RaAbstractDn subject) {
+        if (subject != null) {
+            return !subject.getFieldInstances().isEmpty();
+        }
+        return false;
+    }
+
     /**
      * Request info is rendered if any SDN or SAN fields exists
      *
@@ -2209,17 +2580,10 @@ public class EnrollMakeNewRequestBean implements Serializable {
     }
 
     /**
-     * @return the if there is at least one field in subject dn that should be rendered as determined by state of dependencies
+     * @return the if there is at least one field in subject dn (required or optional)
      */
     public boolean isSubjectDnRendered() {
-        if (getSubjectDn() != null) {
-            for (final FieldInstance fieldInstance : getSubjectDn().getRequiredFieldInstances()) {
-                if (isFieldInstanceRendered(fieldInstance)) {
-                    return true;
-                }
-            }
-        }
-        return false;
+        return hasAnyField(getSubjectDn());
     }
 
     /**
@@ -2229,33 +2593,29 @@ public class EnrollMakeNewRequestBean implements Serializable {
         if (subjectDn == null) {
             final EndEntityProfile endEntityProfile = getEndEntityProfile();
             final CertificateProfile certificateProfile = getCertificateProfile();
-            final X509CAInfo x509cainfo = (X509CAInfo) getCAInfo();
-            if (endEntityProfile != null && certificateProfile != null && x509cainfo != null) {
+            final CAInfo cainfo = getCAInfo();
+            if (endEntityProfile != null && certificateProfile != null && cainfo != null) {
                 subjectDn = new SubjectDn(endEntityProfile);
-                subjectDn.setLdapOrder(x509cainfo.getUseLdapDnOrder() && certificateProfile.getUseLdapDnOrder());
-                subjectDn.setNameStyle(x509cainfo.getUsePrintableStringSubjectDN() ? PrintableStringNameStyle.INSTANCE : CeSecoreNameStyle.INSTANCE);
+                if (cainfo instanceof X509CAInfo) {
+                    final X509CAInfo x509cainfo = (X509CAInfo) cainfo;
+                    subjectDn.setLdapOrder(x509cainfo.getUseLdapDnOrder() && certificateProfile.getUseLdapDnOrder());
+                    subjectDn.setNameStyle(x509cainfo.getUsePrintableStringSubjectDN() ? PrintableStringNameStyle.INSTANCE : CeSecoreNameStyle.INSTANCE);
+                }
+                for (EndEntityProfile.FieldInstance instance: subjectDn.getRequiredFieldInstances()) {
+                    if (isDnEmail(instance)) {
+                        instance.setUseDataFromEmailField(true);
+                    }
+                }
             }
         }
         return subjectDn;
     }
 
     /**
-     * @return the if there is at least one field in subjectAlternativeName that should be rendered as determined by state of dependencies
+     * @return the if there is at least one field in subjectAlternativeName (required or optional)
      */
     public boolean isSubjectAlternativeNameRendered() {
-        if (getSubjectAlternativeName() != null) {
-            for (final FieldInstance fieldInstance : getSubjectAlternativeName().getRequiredFieldInstances()) {
-                if (isFieldInstanceRendered(fieldInstance)) {
-                    return true;
-                }
-            }
-            for (final FieldInstance fieldInstance : getSubjectAlternativeName().getOptionalFieldInstances()) {
-                if (isFieldInstanceRendered(fieldInstance)) {
-                    return true;
-                }
-            }
-        }
-        return false;
+        return hasAnyField(getSubjectAlternativeName());
     }
 
     /**
@@ -2271,23 +2631,52 @@ public class EnrollMakeNewRequestBean implements Serializable {
         return subjectAlternativeName;
     }
 
+    public boolean isClearPasswordAllowed() {
+        EndEntityProfile profile = getEndEntityProfile();
+        if (profile != null) {
+            boolean allowClearPwd = profile.isClearTextPasswordUsed() && (selectedTokenType > 1);
+            if(!clearPasswordDirty) {
+                if(!allowClearPwd) {
+                    useClearPassword = false;
+                } else {
+                    useClearPassword = profile.isClearTextPasswordDefault();
+                }
+            }
+            return allowClearPwd;
+        }
+        return false;
+    }
+    
+    public boolean isClearPasswordRequired() {
+        EndEntityProfile profile = getEndEntityProfile();
+        if (profile != null) {
+            boolean requireClearPwd = profile.isClearTextPasswordUsed() && profile.isClearTextPasswordRequired();
+            if(requireClearPwd && !clearPasswordDirty) {
+                useClearPassword = profile.isClearTextPasswordDefault();
+                clearPasswordDirty = true;
+            }
+            return requireClearPwd;
+        }
+        return false;
+    }
+    
+    public boolean getClearPassword() {
+         if(!clearPasswordDirty) {
+            isClearPasswordAllowed();
+        }
+        return useClearPassword;
+    }
+    
+    public void setClearPassword(boolean clearPwd) {
+        clearPasswordDirty = true;
+        useClearPassword = clearPwd;
+    }
+
     /**
      * @return the if there is at least one field (required or optional) in subject directory attributes that should be rendered
      */
     public boolean isSubjectDirectoryAttributesRendered() {
-        if (getSubjectDirectoryAttributes()!=null) {
-            for (final FieldInstance fieldInstance : getSubjectDirectoryAttributes().getRequiredFieldInstances()) {
-                if (isFieldInstanceRendered(fieldInstance)) {
-                    return true;
-                }
-            }
-            for(final FieldInstance fieldInstance : getSubjectDirectoryAttributes().getOptionalFieldInstances()) {
-                if (isFieldInstanceRendered(fieldInstance)) {
-                    return true;
-                }
-            }
-        }
-        return false;
+        return hasAnyField(getSubjectDirectoryAttributes());
     }
 
     /**
@@ -2329,11 +2718,11 @@ public class EnrollMakeNewRequestBean implements Serializable {
         return false;
     }
 
-    public UploadedFile getUploadFile() {
+    public Part getUploadFile() {
         return uploadFile;
     }
 
-    public void setUploadFile(UploadedFile uploadFile) {
+    public void setUploadFile(Part uploadFile) {
         this.uploadFile = uploadFile;
     }
 
@@ -2392,6 +2781,10 @@ public class EnrollMakeNewRequestBean implements Serializable {
         return certificateRequest;
     }
 
+    private byte[] getCertificateRequestBytes() throws IOException {
+        return RequestMessageUtils.getRequestBytes(getCertificateRequest().getBytes(StandardCharsets.UTF_8));
+    }
+
     /**
      * @param certificateRequest the certificateRequest to set
      */
@@ -2425,6 +2818,7 @@ public class EnrollMakeNewRequestBean implements Serializable {
         requestPreview.updateCA(getCAInfo());
         requestPreview.updateCertificateProfile(getCertificateProfile());
         requestPreview.setMore(requestPreviewMoreDetails);
+        requestPreview.updateSshPrincipals(getSshPrincipalsList());
         return requestPreview;
     }
 
@@ -2483,26 +2877,52 @@ public class EnrollMakeNewRequestBean implements Serializable {
         UIComponent components = event.getComponent();
         UIInput emailInput = (UIInput) components.findComponent("upnRfcEmail");
         UIInput domainInput = (UIInput) components.findComponent("upnRfcDomain");
+        // Workaround to render an unmodifiable e-mail field in SAN.
+        if ((domainInput == null || domainInput != null && !domainInput.isRendered()) & (emailInput == null || (emailInput != null && !emailInput.isRendered()))) {
+            UIInput emailInput2 = (UIInput) components.findComponent("upnRfcEmail2");
+            if (emailInput2 != null) {
+                emailInput = emailInput2;
+            }
+        }
         int index = -1;
         String email = "";
         if (emailInput != null) {
-            email = emailInput.getValue().toString();
             // Split the clientId on ':', the second to last substring is the loop index
             String[] split = emailInput.getClientId().split(":");
             index = Integer.parseInt(split[split.length - 2]);
+            // log.debug("Index " + index + " for clientId '" + emailInput.getClientId() + "'.");
+        }
+        if (emailInput != null && emailInput.getValue() != null) {
+            email = emailInput.getValue().toString();
+            log.debug("Index " + index + " mail part '" + email + "'.");
         }
         String domain = "";
-        if (domainInput != null) {
+        if (domainInput != null && domainInput.getValue() != null) {
             domain = domainInput.getValue().toString();
+            log.debug("Index " + index + " domain part '" + domain + "'.");
         }
         String concatenated = "";
         if (!email.trim().isEmpty() && !domain.trim().isEmpty()) {
             concatenated = email + "@" + domain;
+        } else if (email.trim().isEmpty() && !domain.trim().isEmpty()) {
+            // Field layout changed: drop-down box for the domain part contains entire e-mail. 
+            concatenated = domain;
+        } else if (!email.trim().isEmpty() && domain.trim().isEmpty()) {
+            // Field layout changed: text-field for email contains entire e-mail. 
+            concatenated = email;
         }
-        List<EndEntityProfile.FieldInstance> fieldInstances = (List<EndEntityProfile.FieldInstance>) subjectAlternativeName.getRequiredFieldInstances();
-        if (index >= 0 && index < fieldInstances.size()) {
-            fieldInstances.get(index).setValue(concatenated);
+        if (emailInput.getClientId().startsWith("requestInfoForm:subjectAlternativeNameOptional")) {
+            List<FieldInstance> fi = (List<EndEntityProfile.FieldInstance>) subjectAlternativeName.getOptionalFieldInstances();
+            if (index >= 0 && index < fi.size()) {
+                fi.get(index).setValue(concatenated);
+            }
+        } else {
+            List<FieldInstance> fi = (List<EndEntityProfile.FieldInstance>) subjectAlternativeName.getRequiredFieldInstances();
+            if (index >= 0 && index < fi.size()) {
+                fi.get(index).setValue(concatenated);
+            }
         }
+        log.debug("Index " + index + " set to rfc822mail '" + email + "' / domain '" + domain + "' / conc. " + concatenated + ".");
     }
 
     /**
@@ -2531,7 +2951,7 @@ public class EnrollMakeNewRequestBean implements Serializable {
                 for (String namespace : eabNamespaces) {
                     ids.addAll(eabConfiguration.getEABMap().get(namespace));
                 }
-                if (ids != null && !ids.isEmpty()) {
+                if (!ids.isEmpty()) {
                     eabIdAutoCompleteSelectItems.add(new SelectItem("..."));
                     ids.stream().filter(e -> e.toLowerCase().startsWith(value.toLowerCase())).sorted()
                             .limit(32).forEach(v -> eabIdAutoCompleteSelectItems.add(new SelectItem(v)));
@@ -2582,5 +3002,388 @@ public class EnrollMakeNewRequestBean implements Serializable {
     public boolean getHasEabIdAutoCompleteSelectItems() {
         return eabIdAutoCompleteSelectItems.size() > 0;
     }
+    
+    // SSH enrollment fields
+    /**
+     * @return true if the current certificate profile is of type SSH
+     */
+    public boolean isRenderSshEnrolmentFields() {
+        if(StringUtils.isNotEmpty(getSelectedCertificateProfile()) && getSelectedKeyPairGenerationEnum()!=null &&
+                this.authorizedCertificateProfiles.getValue(Integer.parseInt(getSelectedCertificateProfile()))
+                    .getType() == CertificateConstants.CERTTYPE_SSH) {
+            return true;
+        } else {
+            return false;
+        }
+    }
+
+    public String getSshKeyId() {
+        return sshKeyId;
+    }
+
+    public void setSshKeyId(String sshKeyId) {
+        this.sshKeyId = sshKeyId;
+    }
+
+    public String getSshCertificateComment() {
+        return sshCertificateComment;
+    }
+
+    public void setSshCertificateComment(String sshCertificateComment) {
+        this.sshCertificateComment = sshCertificateComment;
+    }
+
+    public String getSshPubKeyFileName() {
+        return sshPubKeyFileName;
+    }
+
+    public void getSshPubKeyFileName(String sshPubKeyFileName) {
+        this.sshPubKeyFileName = sshPubKeyFileName;
+    }
+    
+    
+    private EndEntityProfile getSelectedEndEntityProfileContent() {
+        if(StringUtils.isNotEmpty(getSelectedEndEntityProfile())) {
+            return this.authorizedEndEntityProfiles.getValue(Integer.parseInt(getSelectedEndEntityProfile()));
+        } 
+        return null;
+    }
+    
+    private CertificateProfile getSelectedCertificateProfileContent() {
+        if(StringUtils.isNotEmpty(getSelectedCertificateProfile())) {
+            return this.authorizedCertificateProfiles.getValue(Integer.parseInt(getSelectedCertificateProfile()));
+        } 
+        return null;
+    }
+
+    public boolean isModifiableCriticalOptionsForceCommand() {
+        EndEntityProfile eeProfile = getSelectedEndEntityProfileContent();
+        return eeProfile!=null ? eeProfile.isSshForceCommandModifiable() : false;
+    }
+    
+    public boolean isRequiredCriticalOptionsForceCommand() {
+        EndEntityProfile eeProfile = getSelectedEndEntityProfileContent();
+        return eeProfile!=null ? eeProfile.isSshForceCommandRequired() : false;
+    }
+
+    public String getCriticalOptionsForceCommand() {
+        if(criticalOptionsForceCommand==null 
+                && StringUtils.isNotEmpty(getSelectedEndEntityProfile())) {
+            criticalOptionsForceCommand = getSelectedEndEntityProfileContent().getSshForceCommand();
+            if(criticalOptionsForceCommand==null) {
+                criticalOptionsForceCommand = "";
+            }
+        }
+        return criticalOptionsForceCommand;
+    }
+
+    public void setCriticalOptionsForceCommand(String criticalOptionsForceCommand) {
+        this.criticalOptionsForceCommand = criticalOptionsForceCommand;
+    }
+    
+    public boolean isModifiableCriticalOptionsSourceAddress() {
+        EndEntityProfile eeProfile = getSelectedEndEntityProfileContent();
+        return eeProfile!=null ? eeProfile.isSshSourceAddressModifiable() : false;
+    }
+    
+    public boolean isRequiredCriticalOptionsSourceAddress() {
+        EndEntityProfile eeProfile = getSelectedEndEntityProfileContent();
+        return eeProfile!=null ? eeProfile.isSshSourceAddressRequired() : false;
+    }
+
+    public String getCriticalOptionsSourceAddress() {
+        if(criticalOptionsSourceAddress==null 
+                && StringUtils.isNotEmpty(getSelectedEndEntityProfile())) {
+            criticalOptionsSourceAddress = getSelectedEndEntityProfileContent().getSshSourceAddress();
+            if(criticalOptionsSourceAddress==null) {
+                criticalOptionsSourceAddress = "";
+            }
+        }
+        return criticalOptionsSourceAddress;
+    }
+
+    public void setCriticalOptionsSourceAddress(String criticalOptionsSourceAddress) {
+        this.criticalOptionsSourceAddress = criticalOptionsSourceAddress;
+    }
+
+    public List<SelectItem> getSshVerifyRequiredOptions() {
+        final List<SelectItem> options = new ArrayList<>();
+        options.add(new SelectItem(true, raLocaleBean.getMessage("enroll_ssh_critical_verify_required_enabled")));
+        options.add(new SelectItem(false, raLocaleBean.getMessage("enroll_ssh_critical_verify_required_disabled")));
+        return options;
+    }
+
+    public boolean isModifiableCriticalOptionsVerifyRequired() {
+        EndEntityProfile eeProfile = getSelectedEndEntityProfileContent();
+        return eeProfile!=null ? eeProfile.isSshVerifyRequiredModifiable() : false;
+    }
+    
+    public boolean isRequiredCriticalOptionsVerifyRequired() {
+        EndEntityProfile eeProfile = getSelectedEndEntityProfileContent();
+        return eeProfile!=null ? eeProfile.isSshVerifyRequiredRequired() : false;
+    }
+
+    public boolean getCriticalOptionsVerifyRequired() {
+        if (criticalOptionsVerifyRequired.isEmpty() && StringUtils.isNotEmpty(getSelectedEndEntityProfile())) {
+            criticalOptionsVerifyRequired = Optional.of(getSelectedEndEntityProfileContent().getSshVerifyRequired());
+        }
+        if (criticalOptionsVerifyRequired.isPresent()) {
+            return criticalOptionsVerifyRequired.get();
+        }
+        return false;
+    }
+
+    public void setCriticalOptionsVerifyRequired(final boolean criticalOptionsVerifyRequired) {
+        this.criticalOptionsVerifyRequired = Optional.of(criticalOptionsVerifyRequired);
+    }
+    
+    public boolean isRenderedSshAdditionalExtensions() {
+        return true; // will change soon
+    }
+
+    public String getSshAdditionalExtensions() {
+        return sshAdditionalExtensions;
+    }
+
+    public void setSshAdditionalExtensions(String sshAdditionalExtensions) {
+        this.sshAdditionalExtensions = sshAdditionalExtensions;
+    }
+    
+    public List<EndEntityProfile.FieldInstance> getSshPrincipals() {
+        if(getSelectedEndEntityProfileContent()==null) {
+            return null;
+        }
+        if(sshPrincipals==null) {
+            sshPrincipals = new ArrayList<>();
+            final Field field = getSelectedEndEntityProfileContent().new Field(SshEndEntityProfileFields.SSH_PRINCIPAL);
+            for (final EndEntityProfile.FieldInstance fieldInstance : field.getInstances()) {
+                sshPrincipals.add(fieldInstance);
+            }
+        }
+        return sshPrincipals;
+    }
+    
+    public String getSshPrincipalsString() {
+        StringBuilder sb = new StringBuilder();
+        for(EndEntityProfile.FieldInstance instance: getSshPrincipals()) {
+            if(StringUtils.isNotEmpty(instance.getValue())){
+                sb.append(instance.getValue() + ",");
+            }
+        }
+        return sb.toString();
+    }
+    
+    public boolean isEnabledDownloadSshCertificate() {
+        return isRenderSshEnrolmentFields() && sshPubKeyDescription!=null;
+    }
+    
+    public boolean isRenderedDownloadSshCertificate() {
+        // TODO: add validations later
+        // TODO approval
+        return isRenderSshEnrolmentFields() && getSelectedKeyPairGenerationEnum()==KeyPairGeneration.PROVIDED_BY_USER;
+    }
+    
+    public boolean isUploadSshPubKeyRequestRendered() {
+        return isRenderSshEnrolmentFields() && getSelectedKeyPairGenerationEnum()==KeyPairGeneration.PROVIDED_BY_USER;
+    }
+        
+    public void uploadSshPubKey() {
+        if(uploadFile!=null) {
+            try {
+                final byte[] fileBytes = IOUtils.toByteArray(uploadFile.getInputStream(), uploadFile.getSize());
+                sshPublicKeyString = new String(fileBytes);
+                updateSshPublicKey();
+                return;
+            } catch (IOException e) {
+                // NOPMD
+            }
+        }
+        if(StringUtils.isNotEmpty(sshPublicKeyString)) {
+            updateSshPublicKey();
+            return;
+        }
+        raLocaleBean.addMessageError(ENROLL_INVALID_SSH_PUB_KEY);
+    }
+    
+    private void updateSshPublicKey() {
+        try {
+            SshPublicKey pubKey = SshKeyFactory.INSTANCE.extractSshPublicKeyFromFile(sshPublicKeyString.getBytes());
+            sshPublicKey = pubKey.encode();
+            algorithmFromCsr = pubKey.getKeyAlgorithm();
+            sshPubKeyDescription = "Algorithm: " + pubKey.getKeyAlgorithm() + ", encoded key: " + Base64.encodeBase64String(sshPublicKey);
+            sshPubKeyDescription = sshPubKeyDescription.substring(0, Math.min(100, sshPubKeyDescription.length()));
+            
+            int certEnd = sshPublicKeyString.indexOf(" ", sshPublicKeyString.indexOf(" ")+1);
+            if(certEnd!=-1) {
+                sshCertificateComment = sshPublicKeyString.substring(certEnd+1).trim();
+                log.info("sshCertificateComment: " + sshCertificateComment);
+            }
+            
+        } catch (Exception e) {
+            sshPublicKey = null;
+            sshPubKeyDescription = raLocaleBean.getMessage("enroll_invalid_ssh_pub_key");;
+            sshPublicKeyString = null;
+            log.error("error: ", e);
+        }
+    }
+    
+    public String getSshPubKeyDescription() {
+        return sshPubKeyDescription;
+    }
+    
+    public String getSshPubKeyRequest() {
+       if (StringUtils.isEmpty(sshPublicKeyString)) {
+           sshPublicKeyString = raLocaleBean.getMessage("enroll_upload_ssh_pubkey_placeholder");
+        }
+        return sshPublicKeyString;
+    }
+
+    /**
+     * @param sshPublicKeyString the sshPublicKeyString to set
+     */
+    public void setSshPubKeyRequest(final String sshPublicKeyString) {
+        this.sshPublicKeyString = sshPublicKeyString;
+    }
+    
+    private List<String> getSshPrincipalsList(){
+        
+        List<String> principals = new ArrayList<>();
+        for(EndEntityProfile.FieldInstance instance: getSshPrincipals()) {
+            if(StringUtils.isNotEmpty(instance.getValue())){
+                principals.add(instance.getValue());
+            }
+        }
+        return principals;
+    }
+    
+    public void downloadSshCertificate() {
+        byte[] token = enrollSshCertificate();
+        downloadToken(token, APPLICATION_OCTET_STREAM, "-cert.pub");
+    }
+
+    private byte[] enrollSshCertificate() {
+        
+        if(StringUtils.isEmpty(getEndEntityInformation().getUsername())) {
+            return null;
+        }
+        
+        if(sshPublicKey==null && getSelectedKeyPairGenerationEnum()!=KeyPairGeneration.POSTPONE) {
+            raLocaleBean.addMessageError(ENROLL_INVALID_SSH_PUB_KEY);
+            return null;
+        }
+        
+        if(StringUtils.isEmpty(getSshKeyId())) {
+            raLocaleBean.addMessageError("enroll_ssh_keyid_required");
+            return null;
+        }
+        
+        final Properties additionalExtensionDataParser = new Properties();
+        Map<String, String> criticalOptionsToAdd = new HashMap<String, String>();
+        Map<String, byte[]> additionalExtensionsToAdd = new HashMap<String, byte[]>();
+
+        if(StringUtils.isNotEmpty(getCriticalOptionsForceCommand())) {
+            criticalOptionsToAdd.put(
+                    SshEndEntityProfileFields.SSH_CRITICAL_OPTION_FORCE_COMMAND_CERT_PROP, getCriticalOptionsForceCommand());
+        }
+        
+        if(StringUtils.isNotEmpty(getCriticalOptionsSourceAddress())) {
+            criticalOptionsToAdd.put(
+                    SshEndEntityProfileFields.SSH_CRITICAL_OPTION_SOURCE_ADDRESS_CERT_PROP, getCriticalOptionsSourceAddress());
+        }
+
+        if (criticalOptionsVerifyRequired.isPresent() && criticalOptionsVerifyRequired.get()) {
+            criticalOptionsToAdd.put(
+                SshEndEntityProfileFields.SSH_CRITICAL_OPTION_VERIFY_REQUIRED_CERT_PROP, null);
+        }
+
+        if (getSshAdditionalExtensions() != null) {
+            try {
+                additionalExtensionDataParser.load(new StringReader(getSshAdditionalExtensions()));
+            } catch (IOException ex) {
+                // Should not happen as we are only reading from a String.
+                throw new RuntimeException(ex);
+            }
+            for (Object o : additionalExtensionDataParser.keySet()) {
+                if (o instanceof String) {
+                    String key = (String) o;
+                    if(key.isEmpty()) {
+                        continue;
+                    }
+                    additionalExtensionsToAdd.put(key, additionalExtensionDataParser.getProperty(key).getBytes());
+                }
+            }
+        }
+
+        
+        SshRequestMessage requestMessage = new SshRequestMessage(sshPublicKey, sshKeyId, 
+                getSshPrincipalsList(), additionalExtensionsToAdd, criticalOptionsToAdd, sshCertificateComment);
+        String password = getEndEntityInformation().getPassword();
+        if(StringUtils.isEmpty(password)) {
+            final byte[] randomData = new byte[16];
+            final Random random = new SecureRandom();
+            random.nextBytes(randomData);
+            password = new String(Hex.encode(CertTools.generateSHA256Fingerprint(randomData)));
+        }
+        requestMessage.setUsername(getEndEntityInformation().getUsername());
+        requestMessage.setPassword(password);
+        
+        endEntityInformation.setPassword(password);
+        endEntityInformation.setCAId(getCAInfo().getCAId());
+        endEntityInformation.setCertificateProfileId(authorizedCertificateProfiles.get(Integer.parseInt(getSelectedCertificateProfile())).getId());
+        endEntityInformation.setEndEntityProfileId(authorizedEndEntityProfiles.get(Integer.parseInt(getSelectedEndEntityProfile())).getId());
+        endEntityInformation.setStatus(EndEntityConstants.STATUS_NEW);
+        endEntityInformation.setType(new EndEntityType(EndEntityTypes.ENDUSER));
+        endEntityInformation.setSshEndEntity(true);
+        endEntityInformation.setTokenType(SecConst.TOKEN_SOFT_BROWSERGEN);
+        endEntityInformation.setTimeCreated(new Date());
+        endEntityInformation.setTimeModified(new Date());
+        
+        try {
+            if(getSelectedKeyPairGenerationEnum()==KeyPairGeneration.PROVIDED_BY_USER) {
+                if(raMasterApiProxyBean.searchUser(
+                        raAuthenticationBean.getAuthenticationToken(), getEndEntityInformation().getUsername())!=null){
+                    throw new EjbcaException(ErrorCode.USER_ALREADY_EXISTS);
+                }
+                return raMasterApiProxyBean.enrollAndIssueSshCertificate(
+                        raAuthenticationBean.getAuthenticationToken(), endEntityInformation, requestMessage);
+            } else {                
+                requestMessage.populateEndEntityData(endEntityInformation, getSelectedCertificateProfileContent());
+                // for SSH enroll we do not need clearPwd as public key is always generated by client(POSTPONE case)
+                raMasterApiProxyBean.addUser(raAuthenticationBean.getAuthenticationToken(), endEntityInformation, false);
+                raLocaleBean.addMessageInfo("enroll_end_entity_has_been_successfully_added", endEntityInformation.getUsername());
+                //TODO approval
+                return null;
+            }
+        } catch (AuthorizationDeniedException e) {
+            raLocaleBean.addMessageInfo("enroll_unauthorized_operation", e.getMessage());
+            log.info(raAuthenticationBean.getAuthenticationToken() + " is not authorized to execute this operation", e);
+        } catch (EjbcaException e) {
+            ErrorCode errorCode = EjbcaException.getErrorCode(e);
+            if (errorCode != null) {
+                if (errorCode.equals(ErrorCode.USER_ALREADY_EXISTS)) {
+                    raLocaleBean.addMessageError(ENROLL_USERNAME_ALREADY_EXISTS, endEntityInformation.getUsername());
+                    log.info("Client " + raAuthenticationBean.getAuthenticationToken() + " failed to add end entity since the username " + endEntityInformation.getUsername() + " already exists");
+                } else if (errorCode.equals(ErrorCode.CERTIFICATE_WITH_THIS_SUBJECTDN_ALREADY_EXISTS_FOR_ANOTHER_USER)) {
+                    // TODO update error messages
+                    raLocaleBean.addMessageError("enroll_subject_dn_already_exists_for_another_user", subjectDn.getValue());
+                    log.info("Subject DN " + subjectDn.getValue() + " already exists for another user", e);
+                } else if (errorCode.equals(ErrorCode.USER_DOESNT_FULFILL_END_ENTITY_PROFILE)) {
+                    raLocaleBean.addMessageError("enroll_user_does_not_fulfill_profile", cleanExceptionMessage(e));
+                    log.info("End entity information does not fulfill profile: " + e.getMessage() + ", " + errorCode);
+                } else {
+                    reportGenericError(errorCode, e);
+                }
+            } else {
+                reportGenericError(null, e);
+            }
+        } catch (Exception e) {
+            reportGenericError(null, e);
+        } finally {
+            endEntityInformation.setUsername(StringUtils.EMPTY);
+        }
+        
+        return null;
+    }
+    
 }
 
