@@ -19,6 +19,7 @@ import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertTrue;
 import static org.junit.Assert.fail;
 
+import java.lang.reflect.InvocationTargetException;
 import java.math.BigInteger;
 import java.security.KeyPair;
 import java.security.PublicKey;
@@ -42,8 +43,6 @@ import org.bouncycastle.asn1.x500.X500Name;
 import org.bouncycastle.operator.ContentVerifierProvider;
 import org.bouncycastle.pkcs.PKCS10CertificationRequest;
 import org.cesecore.CaTestUtils;
-import org.cesecore.CesecoreException;
-import org.cesecore.ErrorCode;
 import org.cesecore.RoleUsingTestCase;
 import org.cesecore.authentication.tokens.AuthenticationToken;
 import org.cesecore.authentication.tokens.UsernamePrincipal;
@@ -78,10 +77,7 @@ import org.cesecore.certificates.endentity.EndEntityInformation;
 import org.cesecore.certificates.endentity.EndEntityType;
 import org.cesecore.certificates.endentity.EndEntityTypes;
 import org.cesecore.certificates.endentity.ExtendedInformation;
-import org.cesecore.certificates.util.AlgorithmConstants;
-import org.cesecore.keys.token.CryptoTokenOfflineException;
 import org.cesecore.keys.token.CryptoTokenTestUtils;
-import org.cesecore.keys.util.KeyTools;
 import org.cesecore.keys.validation.EccKeyValidator;
 import org.cesecore.keys.validation.KeyValidationFailedActions;
 import org.cesecore.keys.validation.KeyValidatorSessionRemote;
@@ -89,9 +85,6 @@ import org.cesecore.keys.validation.KeyValidatorSettingsTemplate;
 import org.cesecore.keys.validation.RsaKeyValidator;
 import org.cesecore.keys.validation.Validator;
 import org.cesecore.mock.authentication.tokens.TestAlwaysAllowLocalAuthenticationToken;
-import org.cesecore.util.Base64;
-import org.cesecore.util.CertTools;
-import org.cesecore.util.CryptoProviderTools;
 import org.cesecore.util.EjbRemoteHelper;
 import org.ejbca.core.ejb.ca.caadmin.CAAdminSessionRemote;
 import org.ejbca.core.ejb.ca.sign.SignSessionRemote;
@@ -102,6 +95,16 @@ import org.junit.After;
 import org.junit.Before;
 import org.junit.BeforeClass;
 import org.junit.Test;
+
+import com.keyfactor.CesecoreException;
+import com.keyfactor.ErrorCode;
+import com.keyfactor.util.Base64;
+import com.keyfactor.util.CertTools;
+import com.keyfactor.util.CryptoProviderTools;
+import com.keyfactor.util.certificate.CertificateWrapper;
+import com.keyfactor.util.crypto.algorithm.AlgorithmConstants;
+import com.keyfactor.util.keys.KeyTools;
+import com.keyfactor.util.keys.token.CryptoTokenOfflineException;
 
 /**
  * Tests creating certificate with extended key usage.
@@ -153,6 +156,9 @@ public class CertificateCreateSessionTest extends RoleUsingTestCase {
         // Now add the test CA so it is available in the tests
         testx509ca = CaTestUtils.createTestX509CA(X509CADN, null, false);
         caSession.addCA(alwaysAllowToken, testx509ca);
+        
+        testx509ca.getCAInfo().setDoEnforceUniquePublicKeys(false);
+        caSession.editCA(roleMgmgToken, testx509ca.getCAInfo());
     }
 
     @After
@@ -162,7 +168,7 @@ public class CertificateCreateSessionTest extends RoleUsingTestCase {
             CryptoTokenTestUtils.removeCryptoToken(null, testx509ca.getCAToken().getCryptoTokenId());
             CaTestUtils.removeCa(alwaysAllowToken, testx509ca.getCAInfo());
         } finally {
-            // Be sure to to this, even if the above fails
+            // Be sure to do this, even if the above fails
         	super.tearDownRemoveRole();
         }
     }
@@ -474,9 +480,7 @@ public class CertificateCreateSessionTest extends RoleUsingTestCase {
         CAInfo cainfo = caSession.getCAInfo(roleMgmgToken, testx509ca.getCAId());
         boolean enforceuniquesubjectdn = cainfo.isDoEnforceUniqueDistinguishedName();
         // We don't want to use this for simplicity of the test
-        boolean enforceuniquekey = cainfo.isDoEnforceUniquePublicKeys();
         cainfo.setDoEnforceUniqueDistinguishedName(true);
-        cainfo.setDoEnforceUniquePublicKeys(false);
         String fp1 = null;
         String fp2 = null;
         try {
@@ -509,7 +513,7 @@ public class CertificateCreateSessionTest extends RoleUsingTestCase {
             } catch (CesecoreException e) {
                 assertEquals(ErrorCode.CERTIFICATE_WITH_THIS_SUBJECTDN_ALREADY_EXISTS_FOR_ANOTHER_USER, e.getErrorCode());
             }
-
+            
             // Make the same test but have some empty fields in the DN to get ECA-1841 DNs in userdata
             // Set a different DN, EJBCA should detect this as "non unique DN" even though there is an empty OU=
             user1.setDN("CN=foounique,OU=,OU=FooOU,O=PrimeKey,C=SE");
@@ -532,16 +536,37 @@ public class CertificateCreateSessionTest extends RoleUsingTestCase {
             } catch (CesecoreException e) {
                 assertEquals(ErrorCode.CERTIFICATE_WITH_THIS_SUBJECTDN_ALREADY_EXISTS_FOR_ANOTHER_USER, e.getErrorCode());
             }
+            
+            user1.setType(EndEntityTypes.ENDUSER.toEndEntityType());
+            user1.setUsername("uniqueEmptyDn001");
+            user1.setDN("");
+            user2.setType(EndEntityTypes.ENDUSER.toEndEntityType());
+            user2.setUsername("uniqueEmptyDn002");
+            user2.setDN("");
+            // create first cert
+            req = new SimpleRequestMessage(keys.getPublic(), "certcreatereq", "foo123");
+            req.setIssuerDN(CertTools.getIssuerDN(testx509ca.getCACertificate()));
+            resp = (X509ResponseMessage) certificateCreateSession.createCertificate(roleMgmgToken, user1, req,
+                    org.cesecore.certificates.certificate.request.X509ResponseMessage.class, signSession.fetchCertGenParams());
+            assertNotNull("Failed to create cert", resp);
+            fp1 = CertTools.getFingerprintAsString(resp.getCertificate());
+            // Create second cert, should not work with the same DN
+            try {
+                resp = (X509ResponseMessage) certificateCreateSession.createCertificate(roleMgmgToken, user2, req,
+                        org.cesecore.certificates.certificate.request.X509ResponseMessage.class, signSession.fetchCertGenParams());
+                
+            } catch (CesecoreException e) {
+                fail("Should have worked to create empty DN with another username");
+            }
         } finally {
             // Finally configure the CA as it was before the test
             cainfo.setDoEnforceUniqueDistinguishedName(enforceuniquesubjectdn);
-            cainfo.setDoEnforceUniquePublicKeys(enforceuniquekey);
             caSession.editCA(roleMgmgToken, cainfo);
             internalCertStoreSession.removeCertificate(fp1);
             internalCertStoreSession.removeCertificate(fp2);
         }
     }
-        
+    
     @Test
     public void testInvalidSignatureAlg() throws CertificateProfileExistsException, AuthorizationDeniedException,
             CustomCertificateSerialNumberException, IllegalKeyException, CADoesntExistsException, CertificateCreateException,
@@ -824,9 +849,7 @@ public class CertificateCreateSessionTest extends RoleUsingTestCase {
         // Make sure that the CA requires unique subject DN, but not unique public keys
         CAInfo cainfo = caSession.getCAInfo(roleMgmgToken, testx509ca.getCAId());
         boolean enforceuniquesubjectdn = cainfo.isDoEnforceUniqueDistinguishedName();
-        boolean enforceuniquekey = cainfo.isDoEnforceUniquePublicKeys();
         cainfo.setDoEnforceUniqueDistinguishedName(true);
-        cainfo.setDoEnforceUniquePublicKeys(false);
         caSession.editCA(roleMgmgToken, cainfo);
         // Use certificate profile that allows DN override
         final CertificateProfile certprof = new CertificateProfile(CertificateProfileConstants.CERTPROFILE_FIXED_ENDUSER);
@@ -911,7 +934,6 @@ public class CertificateCreateSessionTest extends RoleUsingTestCase {
 
         } finally {
             cainfo.setDoEnforceUniqueDistinguishedName(enforceuniquesubjectdn);
-            cainfo.setDoEnforceUniquePublicKeys(enforceuniquekey);
             caSession.editCA(roleMgmgToken, cainfo);
             certProfileSession.removeCertificateProfile(roleMgmgToken, "createCertTest");
             internalCertStoreSession.removeCertificate(fp1);
@@ -1088,7 +1110,7 @@ public class CertificateCreateSessionTest extends RoleUsingTestCase {
             //Fourth certificate. Should be revoked but on hold. 
             responseMessage = (X509ResponseMessage) certificateCreateSession.createCertificate(alwaysAllowToken, endEntity, req,
                     X509ResponseMessage.class, signSession.fetchCertGenParams());
-            internalCertStoreSession.setRevokeStatus(alwaysAllowToken, responseMessage.getCertificate(), new Date(), RevokedCertInfo.REVOCATION_REASON_CERTIFICATEHOLD);
+            internalCertStoreSession.setRevokeStatus(alwaysAllowToken, responseMessage.getCertificate(), new Date(), null, RevokedCertInfo.REVOCATION_REASON_CERTIFICATEHOLD);
             onhold = CertTools.getSerialNumber(responseMessage.getCertificate());
             
             //Update the profile with the new constraint
@@ -1214,7 +1236,7 @@ public class CertificateCreateSessionTest extends RoleUsingTestCase {
                 assertTrue("Should not create new certificate for this user with the same key", false);
             } catch (CesecoreException e) {
                 assertEquals("User 'enforceKeyRenewalTestUser' is not allowed to use same key as another certificate is using.", e.getMessage());
-                assertEquals(ErrorCode.CERTIFICATE_FOR_THIS_KEY_ALLREADY_EXISTS, e.getErrorCode());
+                assertEquals(ErrorCode.CERTIFICATE_FOR_THIS_KEY_ALREADY_EXISTS, e.getErrorCode());
             }
         } finally {
             // Configure the CA as it was before the test
@@ -1226,8 +1248,8 @@ public class CertificateCreateSessionTest extends RoleUsingTestCase {
         }
     }
 
-    private Validator createKeyValidator(Class<? extends Validator> type, final String name, final String description) throws InstantiationException, IllegalAccessException {
-        Validator result = type.newInstance();
+    private Validator createKeyValidator(Class<? extends Validator> type, final String name, final String description) throws InstantiationException, IllegalAccessException, IllegalArgumentException, InvocationTargetException, NoSuchMethodException, SecurityException {
+        Validator result = type.getDeclaredConstructor().newInstance();
         result.setProfileName(name);
         if (null != description) {
             result.setDescription(description);
